src/assets/styles.css
@import url('https://rsms.me/inter/inter.css');

html {
  font-family: 'Inter', sans-serif;
  font-feature-settings: 'zero', 'ss01', 'ss02', 'ss03';
  font-size: calc(1em + 1vw);
}

@supports (font-variation-settings: normal) {
  html {
    font-family: 'Inter var', sans-serif;
  }
}

#root {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

header {
  background-color: #212121;
  padding: 48px;
  z-index: 10000;
  width: 100%;
}

footer {
  margin: 0 0 24px 0;
}

code {
  background-color: #303030;
  padding: 0 16px;
  border-radius: 16px;
  white-space: nowrap;
}

hr {
  margin: 32px;
}

.form {
  display: flex;
  gap: 16px;
  margin: 56px 0 8px;
}

.submitBox {
  margin-bottom: 25.15px;
  display: flex;
}

.appBar {
  align-items: center;
}

.tabs {
  width: 480px;
}

.tabs button {
  border-radius: 16px 16px 0 0;
}

.tabsWrapper {
  width: 100%;
  max-width: 600px;
  margin: 0 24px 24px;
}

.tabsWrapper > div:first-of-type {
  border-radius: 0 0 16px 16px;
}

.tabContainer {
  padding: 24px;
}

.tabContainer h2 {
  margin: 20px 0;
}

.searchFormControl {
  width: 100%;
}

.MuiInputLabel-filled.MuiInputLabel-shrink.inputShrink {
  transform: translate(12px, 10px) scale(0.55);
}

.selection {
  display: flex;
  justify-content: space-evenly;
  margin: 52px 0;
  gap: 8px;
}

.selection > * {
  width: 33%;
  max-width: 150px;
}

.resultCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 24px;
}

div.resultCardHeader {
  padding: 4px 16px;
}

.resultCardHeaderTitle {
  display: flex;
  justify-content: center;
  align-items: baseline;
  gap: 8px;
  margin-bottom: 8px;
}

.resultCardActions {
  display: flex;
  justify-content: space-evenly;
  width: 100%;
}

.resultCardContainer {
  margin-top: 16px;
}

.multiResultCardContainer {
  margin-top: 16px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.link {
  text-decoration: none;
  color: inherit;
  box-shadow: inset 0 -3px 0 #ff9800;
  transition: all 300ms ease-in-out;
}

.link:hover {
  color: #212121;
  box-shadow: inset 0 -1.3rem 0 #ff9800;
}

.footerLink {
  text-decoration: none;
  color: inherit;
  box-shadow: inset 0 0 0 #ff9800;
  transition: all 300ms ease-in-out;
}

.footerLink:hover {
  color: #212121;
  box-shadow: inset 0 -1.3rem 0 #ff9800;
}

.buttonIcon {
  margin-left: 8px;
}

.snackbarCloseIcon {
  padding: 4px;
}

.addToHomeScreen > div {
  width: 100%;
  max-width: 600px;
  text-align: left;
  margin: 0 0 24px;
}

.addToHomeScreenIcon {
  align-items: center;
}

.addToHomeScreenMessage {
  display: flex;
  align-items: center;
}

.addToHomeScreenMessage > div {
  margin: 0;
}

.cursorCopy {
  cursor: copy;
}

@media (max-width: 600px) {
  .tabs {
    width: 100%;
    max-width: 480px;
  }
}

